--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -44,15 +44,47 @@
 }
 
 .footer {
-  width: 100%;
-  max-width: 1100px;
-  margin: auto auto 0;
-  padding: 8px;
+  @apply max-w-7xl mx-auto px-4 lg:px-8 mt-10 mb-32 md:mb-10;
+}
 
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+.footer-wrapper {
+  @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 box-border text-white;
+}
+
+.footer-business {
+  @apply grid grid-cols-3 md:grid-cols-1 gap-3 md:gap-1;
+}
+
+.footer-subtitle {
+  @apply uppercase text-red-600 text-xs font-bold mb-2;
+}
+
+.footer-links {
+  @apply text-gray-300 hover:text-red-600 px-3 rounded-md text-xs font-medium;
+}
+
+.footer-support-wrapper {
+  @apply space-y-3;
+}
+
+.footer-partner {
+  @apply flex flex-col justify-center items-center;
+}
+
+.h3-w3 {
+  @apply h-3 w-3;
+}
+
+.width-28 {
+  @apply w-28;
+}
+
+.partner {
+  @apply text-xs font-sans text-gray-300;
+}
+
+.flex-space-center {
+  @apply flex space-x-3 items-center text-xs;
 }
 
 .copyright {
@@ -63,72 +95,21 @@
 .settings,
 .social {
   user-select: none;
+  @apply flex space-x-3 justify-center md:justify-start lg:pl-3;
 }
 
-.settings a,
-.social a {
-  cursor: pointer;
-  font-size: 2em;
-  display: inline-flex;
-  padding: 0.25em;
-  margin-right: 1vw;
-  transition: color 250ms ease-out;
-}
-
-.settings a:last-of-type,
-.social a:last-of-type {
-  margin-right: 0;
-}
-
-.settings a:hover,
-.social a:hover {
-  transition: color 50ms ease-out;
+.social-icon {
+  @apply fill-current text-white w-6 h-6;
 }
 
 .toggleDarkMode:hover {
   color: #2795e9;
 }
 
-.twitter:hover {
-  color: #2795e9;
-}
-
-.zhihu:hover {
-  color: #0066ff;
-}
-
-.github:hover {
-  color: #c9510c;
-}
-
-.linkedin:hover {
-  color: #0077b5;
-}
-
 .comments {
   width: 100%;
   margin-top: 2em;
   border-top: 1px solid var(--fg-color-0);
-}
-
-@media only screen and (max-width: 566px) {
-  .footer {
-    flex-direction: column;
-  }
-
-  .footer > div {
-    margin-top: 1em;
-  }
-
-  .footer .settings {
-    order: 1;
-  }
-  .footer .social {
-    order: 2;
-  }
-  .footer .copyright {
-    order: 3;
-  }
 }
 
 .pageActions {
